# RegTriage-OpenEnv

./: .env.example  .gitignore  Dockerfile  OPENENV_REFERENCE_ANALYSIS.md  README.md  __init__.py  baseline_results.md  demo.py  env.py  environment.py  grading.py  inference.py  models.py  openenv.yaml  pyproject.toml  run_model_baseline.py  run_multi_baseline.py  run_qwen_rerun.py  smoke_test.py  train_skeleton.py  transcripts.json
baseline_results_multi/: Gemma-4-26B-A4B-IT_run1.json  Gemma-4-26B-A4B-IT_run2.json  Gemma-4-26B-A4B-IT_run3.json  Gemma-4-26B-A4B-IT_summary.json  Gemma-4-31B-IT_run1.json  Gemma-4-31B-IT_run2.json  Gemma-4-31B-IT_run3.json  Gemma-4-31B-IT_summary.json  Qwen-3.5-35B-A3B_run1.json  Qwen-3.5-35B-A3B_run2.json  Qwen-3.5-35B-A3B_run3.json  Qwen-3.5-35B-A3B_summary.json
regtriage_openenv/: __init__.py  client.py  environment.py  grading.py  models.py  redact.py  tasks.yaml
regtriage_openenv/server/: __init__.py  app.py
server/: app.py
tests/: test_redact.py
